--- a/app/src/main/res/layout/fragment_owner_details.xml
+++ b/app/src/main/res/layout/fragment_owner_details.xml
@@ -94,7 +94,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_4sdp"
                         android:background="@android:color/transparent"
-                        android:hint="@string/_10_digit_mobile_number"
+                        android:hint="@string/enter_mobile_number_mandatory"
                         android:inputType="number"
                         android:maxLength="10"
                         android:text="@={viewModel.ownerModel.mobile}"
@@ -249,7 +249,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
                         android:maxLength="12"
-                        android:text="@={viewModel.ownerModel.alternateContactPerson}"
+                        android:text="@={viewModel.ownerModel.alternativeContactperson}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -286,7 +286,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_4sdp"
                         android:background="@android:color/transparent"
-                        android:hint="@string/_10_digit_mobile_number"
+                        android:hint="@string/alternative_mobile_number"
                         android:inputType="number"
                         android:maxLength="10"
                         android:text="@={viewModel.ownerModel.alternatePhone}"
