--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -621,7 +621,7 @@
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:padding="@dimen/_10sdp"
-                    android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.submit_for_approval)}"
+                    android:text="@{isUpdate ? context.getString(R.string.submit_for_approval) : context.getString(R.string.submit_for_approval)}"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_14ssp"
